--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="green_aqua">#3ac2c2</color>
+    <color name="gold">#FFD700</color>
+    <color name="yellow">#F0E68C</color>
 
 </resources>
