--- a/app/src/main/res/layout/item_beer.xml
+++ b/app/src/main/res/layout/item_beer.xml
@@ -4,6 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <variable
+            name="imageUrl"
+            type="java.lang.String" />
 
     </data>
 
@@ -24,6 +27,7 @@
 
             <ImageView
                 android:id="@+id/img"
+                setPicasso="@{imageUrl}"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 tools:srcCompat="@tools:sample/avatars"
