--- a/app/src/main/res/layout/fragment_dialog_details.xml
+++ b/app/src/main/res/layout/fragment_dialog_details.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+            name="beerItem"
+            type="com.example.examenintercam.core.model.BeerRequestModelItem" />
 
     </data>
 
@@ -15,27 +19,28 @@
 
         <ImageView
             android:id="@+id/imgBeer"
+            setPicasso="@{beerItem.image_url}"
             android:layout_width="100dp"
             android:layout_height="200dp"
-            tools:srcCompat="@tools:sample/avatars"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toTopOf="@id/linearTwo"
+            app:layout_constraintEnd_toStartOf="@id/linearOne"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/linearOne" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <LinearLayout
             android:id="@+id/linearOne"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imgBeer"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toTopOf="parent">
 
             <!--Title Beer-->
             <TextView
@@ -43,9 +48,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                tools:text="Corona"
+                android:text="@{beerItem.name}"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                android:textSize="20sp" />
+                tools:text="Corona" />
 
             <!--Yeast Beer-->
             <TextView
@@ -54,8 +60,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="@string/txt_yeast"
-                android:textStyle="bold"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <!--Yeast beer value-->
             <TextView
@@ -63,16 +69,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                tools:text="Wyeast 1056 - American Ale"
+                android:text="@{beerItem.ingredients.yeast}"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textSize="16sp" />
+                tools:text="Wyeast 1056 - American Ale" />
 
             <!--Content Beer-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
@@ -80,6 +87,7 @@
                     android:src="@drawable/ic_beer" />
 
                 <TextView
+                    android:id="@+id/txtLiters"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -104,11 +112,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/txt_abv"
                         android:textColor="@color/green_aqua"
-                        android:textStyle="bold"
-                        android:text="@string/txt_abv" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtAbvValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="4.5%" />
@@ -126,11 +135,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/txt_ibu"
                         android:textColor="@color/green_aqua"
-                        android:textStyle="bold"
-                        android:text="@string/txt_ibu" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtIbuValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="4.5%" />
@@ -148,11 +158,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/txt_og"
                         android:textColor="@color/green_aqua"
-                        android:textStyle="bold"
-                        android:text="@string/txt_og" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtOgValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="4.5%" />
@@ -170,11 +181,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@string/txt_fg"
                         android:textColor="@color/green_aqua"
-                        android:textStyle="bold"
-                        android:text="@string/txt_fg" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtFgValue"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         tools:text="4.5%" />
@@ -188,21 +200,25 @@
         <LinearLayout
             android:id="@+id/linearTwo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="10dp"
-            app:layout_constraintTop_toBottomOf="@id/imgBeer"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/imgBeer">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{beerItem.tagline}"
+                android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:text="@string/txt_bitter_experience" />
+                tools:text="@string/txt_bitter_experience" />
 
             <TextView
+                android:id="@+id/txtFirstBrewed"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
@@ -211,30 +227,37 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/txt_brewers_tips"
+                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/txt_brewers_tips" />
+                android:textStyle="bold" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@{beerItem.brewers_tips}"
+                android:textColor="@color/black"
                 tools:text="The earthy and floral aromas from the hops can be overpowering. Drop a little Cascade in at the end of the boil to lift the profile with a bit of citrus." />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/txt_food_pairing"
+                android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/txt_food_pairing" />
+                android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtFoodPairing"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 tools:text="-Spicy chicken tikka masala" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -247,37 +270,37 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:text="@string/txt_hops"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:text="@string/txt_hops" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtHops"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:layout_height="match_parent"
                         tools:text="Fuggles 25g." />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:text="@string/txt_malt"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:text="@string/txt_malt" />
+                        android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/txtMalt"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
+                        android:layout_height="match_parent"
                         tools:text="Fuggles 25g." />
 
                 </LinearLayout>
