--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/principalFragment"
-        android:name="com.example.examenintercam.ui.fragments.principal.PrincipalFragment"
+        android:name="com.example.examenintercam.ui.fragments.home.HomeFragment"
         android:label="Home"
         tools:layout="@layout/fragment_principal">
         <action
@@ -38,6 +38,8 @@
         android:id="@+id/favoritesFragment"
         android:name="com.example.examenintercam.ui.fragments.favorites.FavoritesFragment"
         android:label="Favoritos"
-        tools:layout="@layout/fragment_favorites" />
+        tools:layout="@layout/fragment_favorites">
+
+    </fragment>
 
 </navigation>
