--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -5,6 +5,9 @@
 
     <data>
 
+        <variable
+            name="imageUrl"
+            type="java.lang.String" />
     </data>
 
    <androidx.cardview.widget.CardView
@@ -44,6 +47,7 @@
 
            <ImageView
                android:id="@+id/img"
+               setPicasso="@{imageUrl}"
                android:layout_width="50dp"
                android:layout_height="50dp"
                tools:srcCompat="@tools:sample/avatars"
@@ -69,16 +73,33 @@
 
            <RatingBar
                android:id="@+id/ratingBar"
-               android:layout_width="0dp"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:layout_marginTop="4dp"
-               android:layout_marginBottom="8dp"
-               android:isIndicator="true"
-               app:layout_constraintBottom_toBottomOf="parent"
+               android:progressTint="@color/gold"
+               android:progressBackgroundTint="@color/yellow"
+               android:secondaryProgressTint="@color/yellow"
+               android:numStars="5"
+               android:rating="0"
+               android:stepSize="0.5"
+               android:isIndicator="false"
+               app:layout_constraintTop_toBottomOf="@id/txt"
+               app:layout_constraintBottom_toTopOf="@id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
+               app:layout_constraintStart_toStartOf="parent" />
+
+           <com.google.android.material.button.MaterialButton
+               android:id="@+id/btnSave"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="@string/txt_reating_beer_save"
+               android:layout_marginHorizontal="20dp"
+               android:layout_marginBottom="8dp"
+               app:layout_constraintBottom_toBottomOf="parent"
+               app:layout_constraintTop_toBottomOf="@id/ratingBar"
                app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintTop_toBottomOf="@id/txt" />
+               app:layout_constraintEnd_toEndOf="parent"/>
 
        </androidx.constraintlayout.widget.ConstraintLayout>
 
