--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -45,6 +45,7 @@
                 android:maxLength="50"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
+                android:text="victorknd4@gmail.com"
                 android:hint="@string/txt_user" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -68,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
+                android:text="1234"
                 android:inputType="textPassword"
                 android:hint="@string/txt_password" />
 
