--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -4,27 +4,97 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
+  <group android:scaleX="0.9343295"
+      android:scaleY="0.9343295"
+      android:translateX="6.554746"
+      android:translateY="6.48">
+    <path
+        android:pathData="M0,50.86a50.78,50.78 0,1 1,50.78 50.86A50.82,50.82 0,0 1,0 50.86"
+        android:fillColor="#1daa99"/>
+    <path
+        android:pathData="M32,36.21V73.42s-3.33,3.17 -0.53,6c3.49,3.5 9.65,4.25 14.32,4.53 5.77,0.35 12.09,-0.12 17.26,-2.92a6.84,6.84 0,0 0,3 -2.64c1,-1.85 -0.18,-3.44 -1.21,-4.94V66.85s10.93,0 10.93,-6.57V37a7.27,7.27 0,0 0,-0.52 -2.81c-0.92,-2.21 -3.47,-5 -10.41,-2.34V27.45a70,70 0,0 0,-32.79 0S32,36.21 32,36.21Z"
+        android:fillColor="#fc7572"/>
+    <path
+        android:pathData="M61.72,72.91V34.55a2.35,2.35 0,1 0,-4.64 0V72.91a2.35,2.35 0,1 0,4.64 0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="59.4"
+            android:startY="75.65"
+            android:endX="59.4"
+            android:endY="31.8"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF44545"/>
+          <item android:offset="0.53" android:color="#FFF85D5C"/>
+          <item android:offset="0.97" android:color="#FFFC7572"/>
+        </gradient>
+      </aapt:attr>
     </path>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M61.72,72.91V34.55a2.35,2.35 0,1 0,-4.64 0V72.91a2.35,2.35 0,1 0,4.64 0">
+      <aapt:attr name="android:fillColor">
+        <gradient 
+            android:startX="59.4"
+            android:startY="75.65"
+            android:endX="59.4"
+            android:endY="31.8"
+            android:type="linear">
+          <item android:offset="0" android:color="#FFF44545"/>
+          <item android:offset="0.53" android:color="#FFF85D5C"/>
+          <item android:offset="0.97" android:color="#FFFC7572"/>
+        </gradient>
+      </aapt:attr>
+    </path>
+    <group>
+      <clip-path
+          android:pathData="M61.72,72.91V34.55a2.35,2.35 0,1 0,-4.64 0V72.91a2.35,2.35 0,1 0,4.64 0"/>
+      <path
+          android:pathData="M57.09,31.81h4.63v43.84h-4.63z">
+      </path>
+    </group>
+    <path
+        android:pathData="M54.33,74V37a2.34,2.34 0,1 0,-4.64 0V74a2.34,2.34 0,1 0,4.64 0">
+    </path>
+    <path
+        android:pathData="M54.33,74V37a2.34,2.34 0,1 0,-4.64 0V74a2.34,2.34 0,1 0,4.64 0">
+    </path>
+    <group>
+      <clip-path
+          android:pathData="M54.33,74V37a2.34,2.34 0,1 0,-4.64 0V74a2.34,2.34 0,1 0,4.64 0"/>
+      <path
+          android:pathData="M49.7,34.39h4.63v42.28h-4.63z">
+      </path>
+    </group>
+    <path
+        android:pathData="M35,72.91V34.55a2.57,2.57 0,0 1,2.32 -2.75,2.57 2.57,0 0,1 2.32,2.75V72.91a2.56,2.56 0,0 1,-2.32 2.74A2.56,2.56 0,0 1,35 72.91">
+    </path>
+    <path
+        android:pathData="M35,72.91V34.55a2.57,2.57 0,0 1,2.32 -2.75,2.57 2.57,0 0,1 2.32,2.75V72.91a2.56,2.56 0,0 1,-2.32 2.74A2.56,2.56 0,0 1,35 72.91">
+    </path>
+    <group>
+      <clip-path
+          android:pathData="M35,72.91V34.55a2.57,2.57 0,0 1,2.32 -2.75,2.57 2.57,0 0,1 2.32,2.75V72.91a2.56,2.56 0,0 1,-2.32 2.74A2.56,2.56 0,0 1,35 72.91"/>
+      <path
+          android:pathData="M35.04,31.81h4.63v43.84h-4.63z">
+      </path>
+    </group>
+    <path
+        android:pathData="M42.37,74.65v-37a2.34,2.34 0,1 1,4.64 0v37a2.34,2.34 0,1 1,-4.64 0">
+    </path>
+    <path
+        android:pathData="M42.37,74.65v-37a2.34,2.34 0,1 1,4.64 0v37a2.34,2.34 0,1 1,-4.64 0">
+    </path>
+    <group>
+      <clip-path
+          android:pathData="M42.37,74.65v-37a2.34,2.34 0,1 1,4.64 0v37a2.34,2.34 0,1 1,-4.64 0"/>
+      <path
+          android:pathData="M42.37,35h4.63v42.28h-4.63z">
+      </path>
+    </group>
+    <path
+        android:pathData="M64.92,38.59s5.78,-4.3 5.82,0 0,19.29 0,19.29 0,4.34 -5.82,3.3Z"
+        android:fillColor="#1daa99"/>
+    <path
+        android:pathData="M34.88,31c0.91,0.47 1.39,0.61 2.24,0 0.38,-0.25 1.28,-1.85 1.71,-2a3,3 0,0 1,3.71 2,6.22 6.22,0 0,1 0.05,2 40.43,40.43 0,0 0,-0.46 6.2,1.52 1.52,0 0,0 0.51,1.27 1.07,1.07 0,0 0,1.26 -0.18,2.12 2.12,0 0,0 0.58,-1.21c0.48,-2.47 -0.87,-5 -0.69,-7.46a2.52,2.52 0,0 1,0.47 -1.39c0.28,-0.33 1,-0.71 1.27,-0.13a1.29,1.29 0,0 1,0 0.73c-0.07,0.36 -0.13,0.73 -0.21,1.1a2.3,2.3 0,0 0,0 0.69,0.75 0.75,0 0,0 0.34,0.57 0.81,0.81 0,0 0,1 -0.25c0.45,-0.57 0.22,-1.32 0.16,-2a2.69,2.69 0,0 1,0.73 -2c1.65,-1.78 4.53,-1.38 6.72,-1.37a38.15,38.15 0,0 1,5.65 0.4c1.66,0.25 3.52,1.11 5,-0.12a3.89,3.89 0,0 0,1.44 -3.61c-0.75,-3.74 -4.28,-5 -7.59,-5.76a31,31 0,0 0,-6 -0.92,16.57 16.57,0 0,0 -5.64,0.84c-2.81,0.92 -5.37,2.47 -8.39,2.76a17.13,17.13 0,0 0,-3.05 0.28,7 7,0 0,0 -2.34,1.18A7.33,7.33 0,0 0,30.39 27a25.57,25.57 0,0 0,-0.3 3.72,15.83 15.83,0 0,1 -0.84,3.71c-1.13,3.37 -2.24,5.61 1.13,5.61s2.24,-4.48 2.24,-5.61S32.65,29.89 34.88,31Z"
+        android:fillColor="#fff"/>
+  </group>
 </vector>
