--- a/app/src/main/res/layout/alert_dialog_log_out_object.xml
+++ b/app/src/main/res/layout/alert_dialog_log_out_object.xml
@@ -17,23 +17,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!--<ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/ic_log_out"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/txtBody"
-                app:layout_constraintStart_toEndOf="@id/txtTitle"
-                app:layout_constraintEnd_toEndOf="parent"/>-->
-
             <TextView
                 android:id="@+id/txtTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginHorizontal="20dp"
+                android:textColor="@color/black"
                 android:text="@string/txt_dialog_log_out_title"
                 android:textSize="20sp"
                 android:textStyle="bold"
