--- a/app/src/main/res/layout/item_beer_shimmer.xml
+++ b/app/src/main/res/layout/item_beer_shimmer.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -11,11 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:selectableItemBackgroundBorderless">
+        android:foreground="?android:selectableItemBackgroundBorderless"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -28,9 +27,9 @@
                 android:layout_height="50dp"
                 android:backgroundTint="@color/lb_grey"
                 app:cornerAll="8dp"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.tistory.zladnrms.roundablelayout.RoundableLayout
                 android:id="@+id/txtNameBeer"
@@ -39,10 +38,10 @@
                 android:layout_marginHorizontal="8dp"
                 android:backgroundTint="@color/lb_grey"
                 app:cornerAll="8dp"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/txtTaglineBeer"
+                app:layout_constraintEnd_toStartOf="@id/imgFavorite"
                 app:layout_constraintStart_toEndOf="@id/img"
-                app:layout_constraintEnd_toStartOf="@id/imgFavorite" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.tistory.zladnrms.roundablelayout.RoundableLayout
                 android:id="@+id/txtTaglineBeer"
@@ -51,10 +50,10 @@
                 android:layout_marginHorizontal="4dp"
                 android:backgroundTint="@color/lb_grey"
                 app:cornerAll="8dp"
-                app:layout_constraintTop_toBottomOf="@id/txtNameBeer"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/imgFavorite"
                 app:layout_constraintStart_toEndOf="@id/img"
-                app:layout_constraintEnd_toStartOf="@id/imgFavorite" />
+                app:layout_constraintTop_toBottomOf="@id/txtNameBeer" />
 
             <ImageView
                 android:id="@+id/imgFavorite"
@@ -62,9 +61,9 @@
                 android:layout_height="35dp"
                 android:src="@drawable/ic_favorite"
                 android:tint="@color/lb_grey"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
